--- a/package.json
+++ b/package.json
@@ -9,35 +9,32 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "^1.13.0",
-    "@react-native-community/datetimepicker": "3.5.2",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.13",
-    "@react-navigation/native": "^5.9.6",
-    "@react-navigation/stack": "^5.14.7",
-    "expo": "~42.0.1",
-    "expo-constants": "~11.0.1",
-    "expo-facebook": "~11.3.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-linking": "~2.3.1",
-    "expo-location": "~12.1.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "expo": "^44.0.0",
+    "expo-constants": "~13.0.0",
+    "expo-facebook": "~12.1.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-linking": "~3.0.0",
+    "expo-location": "~14.0.1",
     "expo-push-notification-helper": "^0.4.0",
-    "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-calendars": "^1.1264.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-maps": "^0.28.0",
+    "firebase": "^8.10.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-calendars": "^1.1274.0",
+    "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
-    "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-paper": "^4.11.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.9",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
