--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-location": "~14.0.1",
     "expo-push-notification-helper": "^0.4.0",
     "firebase": "^8.10.0",
+    "native-base": "^3.3.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
