--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "^44.0.0",
     "expo-constants": "~13.0.0",
     "expo-facebook": "~12.1.0",
@@ -27,12 +29,16 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1274.0",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.11.1",
+    "react-native-reanimated": "^2.4.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-status-bar": "~1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
