--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "~13.0.0",
     "expo-facebook": "~12.1.0",
     "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "^11.0.3",
     "expo-linking": "~3.0.0",
     "expo-location": "~14.0.1",
     "expo-push-notification-helper": "^0.4.0",
@@ -29,6 +30,7 @@
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1274.0",
     "react-native-elements": "^3.4.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.12.0",
