--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "*",
+    "axios": "^0.21.2",
     "expo": "^44.0.0",
     "expo-constants": "~13.0.0",
     "expo-facebook": "~12.1.0",
@@ -22,6 +24,7 @@
     "expo-location": "~14.0.1",
     "expo-push-notification-helper": "^0.4.0",
     "firebase": "^8.10.0",
+    "jssha": "^2.3.1",
     "native-base": "^3.3.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -32,7 +35,8 @@
     "react-native-paper": "^4.11.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
