--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
