--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-maps": "0.29.4",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.12.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
