--- a/package.json
+++ b/package.json
@@ -8,36 +8,37 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "^4.0.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^44.0.0",
-    "expo-constants": "~13.0.0",
+    "expo": "^46.0.9",
+    "expo-constants": "~13.2.3",
     "expo-facebook": "~12.1.0",
-    "expo-image-picker": "~12.0.1",
-    "expo-linear-gradient": "^11.0.3",
-    "expo-linking": "~3.0.0",
-    "expo-location": "~14.0.1",
+    "expo-image-picker": "~13.3.1",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-linking": "~3.2.2",
+    "expo-location": "~14.3.0",
     "expo-push-notification-helper": "^0.4.0",
     "firebase": "^8.10.0",
     "fuse.js": "^6.5.3",
     "native-base": "^3.3.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "^0.69.5",
     "react-native-calendars": "^1.1274.0",
     "react-native-elements": "^3.4.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-maps": "0.29.4",
+    "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.12.0",
     "react-native-popup-dialog": "^0.18.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
