--- a/package.json
+++ b/package.json
@@ -8,34 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
-<<<<<<< HEAD
+    "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.3.1",
     "expo": "^46.0.9",
     "expo-constants": "~13.2.3",
-=======
-    "@expo/vector-icons": "^12.0.0",
-    "@gorhom/bottom-sheet": "^4.1.5",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "4.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "@react-navigation/stack": "^6.1.1",
-    "expo": "^44.0.0",
-    "expo-constants": "~13.0.0",
->>>>>>> e8ad104 (add map screen)
     "expo-facebook": "~12.1.0",
     "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-linking": "~3.2.2",
     "expo-location": "~14.3.0",
     "expo-push-notification-helper": "^0.4.0",
+    "expo-status-bar": "~1.2.0",
     "firebase": "^8.10.0",
     "fuse.js": "^6.5.3",
     "native-base": "^3.3.7",
@@ -43,34 +34,16 @@
     "react-dom": "18.0.0",
     "react-native": "^0.69.5",
     "react-native-calendars": "^1.1274.0",
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.12.0",
     "react-native-popup-dialog": "^0.18.3",
-    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
-=======
->>>>>>> 1989ONCE-main
-    "react-native-gesture-handler": "^2.2.0",
-    "react-native-google-maps-directions": "^2.1.1",
-    "react-native-maps": "0.29.4",
-    "react-native-modal-datetime-picker": "^10.2.0",
-    "react-native-paper": "^4.11.1",
-    "react-native-reanimated": "^2.4.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "expo-status-bar": "~1.2.0"
-<<<<<<< HEAD
-=======
->>>>>>> e8ad104 (add map screen)
->>>>>>> 1989ONCE-main
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
