--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^4.11.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^2.4.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "expo-status-bar": "~1.2.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
