--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.3.1",
     "axios": "^0.21.2",
@@ -23,7 +23,7 @@
     "expo-constants": "~13.2.3",
     "expo-facebook": "~12.1.0",
     "expo-image-picker": "~13.3.1",
-    "expo-linear-gradient": "~11.4.0",
+    "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.2.2",
     "expo-location": "~14.3.0",
     "expo-push-notification-helper": "^0.4.0",
@@ -45,11 +45,10 @@
     "react-native-paper": "^4.11.1",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^2.4.0",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "url": "^0.11.0",
-    "expo-linear-gradient": "~11.0.3"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
