--- a/package.json
+++ b/package.json
@@ -1,65 +1,58 @@
 {
+  "name": "ncu-app",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.2.0",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.2.5",
-    "@react-navigation/stack": "^6.3.1",
-    "axios": "^0.21.2",
-    "expo": "^46.0.9",
-    "expo-constants": "~13.2.3",
-    "expo-facebook": "~12.1.0",
-    "expo-image-picker": "~13.3.1",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-linking": "~3.2.2",
-    "expo-location": "~14.3.0",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-navigation/bottom-tabs": "^6.4.1",
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "axios": "^1.2.0",
+    "expo": "~47.0.8",
+    "expo-constants": "^14.0.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-linking": "~3.2.3",
+    "expo-location": "~15.0.1",
     "expo-push-notification-helper": "^0.4.0",
-    "expo-status-bar": "~1.2.0",
-    "firebase": "^8.10.0",
-    "fuse.js": "^6.5.3",
-    "jssha": "^2.3.1",
-    "native-base": "^3.3.7",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "^0.69.5",
-    "react-native-calendars": "^1.1274.0",
-    "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.2.0",
+    "expo-status-bar": "~1.4.2",
+    "firebase": "^9.14.0",
+    "fuse.js": "^6.6.2",
+    "jssha": "^3.3.0",
+    "native-base": "^3.4.22",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-google-maps-directions": "^2.1.1",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-maps": "0.31.1",
-    "react-native-modal-datetime-picker": "^10.2.0",
-    "react-native-paper": "^4.11.1",
+    "react-native-maps": "1.3.2",
+    "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-paper": "^4.12.5",
     "react-native-popup-dialog": "^0.18.3",
-    "react-native-reanimated": "^2.4.0",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@iconify/react": "^3.2.2",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-native": "^3.11.0"
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0"
   },
   "private": true
 }
