--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
