--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.2.5",
@@ -39,6 +40,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-google-maps-directions": "^2.1.1",
+    "react-native-keyboard-listener": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.31.1",
     "react-native-modal-datetime-picker": "^10.2.0",
