--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@react-navigation/stack": "^6.3.14",
     "axios": "^1.2.0",
     "expo": "~47.0.8",
-    "expo-constants": "^14.0.2",
+    "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-linking": "~3.3.1",
     "expo-location": "~15.0.1",
     "expo-push-notification-helper": "^0.4.0",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "firebase": "^9.17.1",
     "fuse.js": "^6.6.2",
     "jssha": "^3.3.0",
@@ -36,7 +37,7 @@
     "qs": "^6.11.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^14.0.0",
@@ -47,7 +48,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-webview": "11.23.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
