--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-webview": "11.23.1",
     "url": "^0.11.0"
   },
