--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.3.14",
     "axios": "^1.2.0",
     "expo": "~47.0.8",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
@@ -38,20 +39,21 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "1.3.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-popup-dialog": "^0.18.3",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-webview": "11.23.1",
-    "url": "^0.11.0",
-    "react-native-gesture-handler": "~2.8.0"
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
