--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "@react-navigation/stack": "^6.3.14",
+    "@types/react-native": "~0.70.6",
     "axios": "^1.2.0",
     "expo": "~47.0.8",
     "expo-barcode-scanner": "~12.1.0",
