--- a/app.json
+++ b/app.json
@@ -37,19 +37,22 @@
         "backgroundColor": "#FFFFFF"
       },
       "intentFilters": [
-      {
-        "action": "VIEW",
-        "autoVerify": true,
-        "data": [
-          {
-            "scheme": "https",
-            "host": "dynamic.link.host",
-            "pathPrefix": "/"
-          }
-        ],
-        "category": ["BROWSABLE", "DEFAULT"]
-      }
-    ]
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "dynamic.link.host",
+              "pathPrefix": "/"
+            }
+          ],
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
+        }
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -58,6 +61,21 @@
       "eas": {
         "projectId": "b795d866-5d36-4bbb-9c46-c8d5446bbf26"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 33,
+            "targetSdkVersion": 33,
+            "buildToolsVersion": "33.0.0"
+          },
+          "ios": {
+            "deploymentTarget": "13.0"
+          }
+        }
+      ]
+    ]
   }
 }
