--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-webview": "11.23.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "expo-build-properties": "~0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
