--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:tsc": "echo \"\\033[33mRunning typescript check\" && tsc"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.4.0",
+    "@react-native-community/datetimepicker": "^6.7.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -20,24 +20,25 @@
     "eslint-config-universe": "^11.2.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~48.0.18",
-    "expo-image-picker": "^14.3.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "install": "^0.13.0",
     "native-base": "^3.4.28",
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-gesture-handler": "^2.12.0",
-    "react-native-reanimated": "^3.3.0",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.22.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "@types/react-native": "^0.72.2",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
