--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@gorhom/bottom-sheet": "^4.4.5",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
@@ -22,7 +22,7 @@
     "@react-navigation/stack": "^6.3.14",
     "@types/react-native": "~0.70.6",
     "axios": "^1.2.0",
-    "expo": "~47.0.8",
+    "expo": "^47.0.14",
     "expo-barcode-scanner": "~12.1.0",
     "expo-build-properties": "~0.4.1",
     "expo-constants": "~14.0.2",
@@ -31,19 +31,19 @@
     "expo-linking": "~3.3.1",
     "expo-location": "~15.0.1",
     "expo-push-notification-helper": "^0.4.0",
-    "expo-status-bar": "~1.4.2",
+    "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.15.6",
     "firebase": "^9.17.1",
     "fuse.js": "^6.6.2",
     "jssha": "^3.3.0",
     "native-base": "^3.4.22",
     "qs": "^6.11.0",
-    "react": "18.2.0",
+    "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.72.4",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-google-maps-directions": "^2.1.1",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "^1.3.2",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.12.5",
@@ -52,7 +52,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-webview": "11.23.1",
     "url": "^0.11.0"
