--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
@@ -22,39 +22,39 @@
     "@react-navigation/stack": "^6.3.14",
     "@types/react-native": "~0.70.6",
     "axios": "^1.2.0",
-    "expo": "^47.0.14",
-    "expo-barcode-scanner": "~12.1.0",
-    "expo-build-properties": "~0.4.1",
-    "expo-constants": "~14.0.2",
-    "expo-image-picker": "~14.0.2",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-linking": "~3.3.1",
-    "expo-location": "~15.0.1",
+    "expo": "^49.0.20",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-build-properties": "~0.8.3",
+    "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-push-notification-helper": "^0.4.0",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.15.6",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "firebase": "^9.17.1",
     "fuse.js": "^6.6.2",
     "jssha": "^3.3.0",
     "native-base": "^3.4.22",
     "qs": "^6.11.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
-    "react-native-gesture-handler": "~2.8.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-google-maps-directions": "^2.1.1",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "1.7.1",
     "react-native-modal-datetime-picker": "^14.0.0",
-    "react-native-pager-view": "6.0.1",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^4.12.5",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-qrcode-svg": "^6.2.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-webview": "11.23.1",
+    "react-native-webview": "13.2.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
