--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "firebase": "^9.17.1",
+    "firebase-admin": "^12.0.0",
     "fuse.js": "^6.6.2",
     "jssha": "^3.3.0",
     "native-base": "^3.4.22",
