--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-router": "^1.56.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
