--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,3 +28,4 @@ jobs:
         with:
           source-dir: ./dist/
           preview-branch: previews
+          token: ${{ secrets.GITHUB_TOKEN }}
