--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           source-dir: ./dist/
           preview-branch: previews
-          token: ${{ secrets.GITHUB_TOKEN }}
+        #   token: ${{ secrets.GITHUB_TOKEN }}
