--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SUPABASE_URL=http://127.0.0.1:54321
-VITE_SUPABASE_ANON_KEY=
+VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}
+VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}
