--- a/.github/workflows/vite-gh-pages.yml
+++ b/.github/workflows/vite-gh-pages.yml
@@ -29,6 +29,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        
+      # Set up .env file with GitHub secrets
+      - name: Set up .env with secrets
+        run: echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" > .env
+             echo "VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}" >> .env
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+          
       - name: Build with Vite
         run: npm ci && npm run build
       - name: Upload artifact
