--- a/.github/workflows/vite-gh-pages.yml
+++ b/.github/workflows/vite-gh-pages.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Set up .env with secrets
         run: echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" > .env
              echo "VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}" >> .env
+             echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> .env
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
