--- a/.github/workflows/vite-gh-pages.yml
+++ b/.github/workflows/vite-gh-pages.yml
@@ -38,6 +38,7 @@ jobs:
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
 
       # Debug - Verify .env file creation
       - name: Debug - Verify .env file creation
