--- a/.github/workflows/vite-gh-pages.yml
+++ b/.github/workflows/vite-gh-pages.yml
@@ -32,13 +32,12 @@ jobs:
         
       # Set up .env file with GitHub secrets
       - name: Set up .env with secrets
-        run: echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" > .env
+        run: |
+             echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" > .env
              echo "VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}" >> .env
-             echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> .env
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
 
       # Debug - Verify .env file creation
       - name: Debug - Verify .env file creation
