--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-router": "^1.56.2",
     "flowbite-react-icons": "^1.1.0",
-    "heroicons": "^2.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "supabase": "^1.200.3"
