--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "flowbite-react-icons": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "supabase": "^1.223.10"
+    "spin-wheel-game": "^1.0.3-alpha.3",
+    "supabase": "^1.226.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.47.0",
