--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 VITE_NCU_PORTAL_CLIENT_ID=
 VITE_NCU_PORTAL_CLIENT_SECRET=
+VITE_ROOT_PATH=http://localhost:5173
+VITE_SERVER_PATH=http://localhost:3000
